--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,7 @@
 /**app.wxss**/
+page {
+  height: 100%;
+}
 .container {
   height: 100%;
   display: flex;
@@ -7,4 +10,5 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
+  border-bottom: 1px solid #eee;
 } 
